--- a/flask-web-app/JenkinsFile
+++ b/flask-web-app/JenkinsFile
@@ -21,7 +21,7 @@ pipeline {
 
     stage('Install Dependencies') {
       steps {
-        sh 'pip install -r requirements.txt'
+        sh 'pip install flask'
       }
     }
 
