--- a/flask-web-app/JenkinsFile
+++ b/flask-web-app/JenkinsFile
@@ -28,16 +28,26 @@ pipeline {
     stage('Static Code Analysis') {
       steps {
         withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-          sh '''
-            apt-get update && apt-get install -y openjdk-17-jdk wget unzip
-            wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
-            unzip sonar-scanner-cli-5.0.1.3006-linux.zip
-            ./sonar-scanner-5.0.1.3006-linux/bin/sonar-scanner \
-              -Dsonar.projectKey=flask-app \
-              -Dsonar.sources=. \
-              -Dsonar.host.url=${SONAR_URL} \
-              -Dsonar.login=$SONAR_AUTH_TOKEN
-          '''
+          script {
+            // Ensure SonarQube Scanner is available and install necessary dependencies
+            sh '''
+              apt-get update -y
+              apt-get install -y openjdk-17-jdk wget unzip
+    
+              # Download and extract Sonar Scanner
+              wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
+              unzip sonar-scanner-cli-5.0.1.3006-linux.zip -d /opt/
+    
+              # Add Sonar Scanner to the PATH
+              export PATH=$PATH:/opt/sonar-scanner-5.0.1.3006-linux/bin
+    
+              # Run SonarQube Analysis
+              sonar-scanner \
+                -Dsonar.projectKey=flask-app \
+                -Dsonar.sources=. \
+                -Dsonar.host.url=${SONAR_URL} \
+                -Dsonar.login=$SONAR_AUTH_TOKEN
+            '''
         }
       }
     }
