--- a/flask-web-app/JenkinsFile
+++ b/flask-web-app/JenkinsFile
@@ -23,38 +23,11 @@ pipeline {
     // Install necessary dependencies
     stage('Install Dependencies') {
       steps {
-        sh 'pip install -r requirements.txt'  // Assuming you have a requirements.txt file
+        sh 'pip install flask  // Assuming you have a requirements.txt file
       }
     }
 
     // Static Code Analysis with SonarQube
-    stage('Static Code Analysis') {
-      steps {
-        withCredentials([string(credentialsId: 'sonarqube', variable: 'SONAR_AUTH_TOKEN')]) {
-          script {
-            // Install necessary dependencies for SonarQube analysis
-            sh '''
-              apt-get update -y
-              apt-get install -y openjdk-17-jdk wget unzip
-
-              # Download Sonar Scanner
-              wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
-              unzip sonar-scanner-cli-5.0.1.3006-linux.zip -d /opt/
-
-              # Add Sonar Scanner to the PATH
-              export PATH=$PATH:/opt/sonar-scanner-5.0.1.3006-linux/bin
-
-              # Run SonarQube analysis
-              sonar-scanner \
-                -Dsonar.projectKey=flask-app \
-                -Dsonar.sources=. \
-                -Dsonar.host.url=${SONAR_URL} \
-                -Dsonar.login=$SONAR_AUTH_TOKEN
-            '''
-          }
-        }
-      }
-    }
 
     // Build Docker Image
     stage('Docker Build & Push') {
