--- a/flask-web-app/JenkinsFile
+++ b/flask-web-app/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline {
   agent {
     docker {
-      image 'python:3.9-slim'
+      image 'abeshith/python-docker:3.9'
       args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
     }
   }
